--- a/dental-web-app-fronten/package.json
+++ b/dental-web-app-fronten/package.json
@@ -9,6 +9,9 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.23",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icon": "^1.0.0",
