--- a/dental-web-app-frontend/package.json
+++ b/dental-web-app-frontend/package.json
@@ -6,15 +6,21 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.23",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.3.1",
     "react-dom": "^17.0.2",
     "react-icon": "^1.0.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "react-select": "^5.3.0",
     "save": "^2.4.0",
     "styled-component": "^2.8.0",
