--- a/dental-web-app-frontend/package.json
+++ b/dental-web-app-frontend/package.json
@@ -12,7 +12,6 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
-
     "bootstrap": "^5.1.3",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.23",
@@ -26,6 +25,7 @@
     "save": "^2.4.0",
     "styled-component": "^2.8.0",
     "styled-components": "^5.3.5",
+    "toggle-switch": "^0.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
